--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "mongoose": "^8.8.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
-    "quill": "^2.0.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
