--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/analytics": "^1.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "draft-js": "^0.11.7",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.10.0",
